fix QR code whitespace under invite URL

--- a/app/assets/stylesheets/main/landing.scss
+++ b/app/assets/stylesheets/main/landing.scss
@@ -23,7 +23,6 @@
 .meeting-url-qrcode-group {
   padding-top: 5px;
   width: 128px;
-  height: 128px;
   text-align: center;
 }
 
